# libTeamTask

./: CMakeLists.txt  libTeamTask.kdev4  main.cpp
.kdev4/: libTeamTask.kdev4
interface/: libTeamTask.h
sources/: libTeamTask.cpp
